[package]
name = "vl6180x"
description = "A embedded-hal driver for the VL6180X proximity and ambient light sensor"
version = "0.1.1"
edition = "2021"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/BroderickCarlin/VL6180x"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "no-std", "sensor", "i2c", "vl6180x"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
regiface = "0.2"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
measurements = "0.11"
jiff = { version = "0.2", default-features = false }
defmt = { version = "1.0", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
